bindings/go/wdissector/wdissector.h

/* field types */
enum ftenum {
    FT_NONE, /* used for text labels with no value */
    FT_PROTOCOL,
    FT_BOOLEAN, /* TRUE and FALSE come from <glib.h> */
    FT_CHAR,    /* 1-octet character as 0-255 */
    FT_UINT8,
    FT_UINT16,
    FT_UINT24, /* really a UINT32, but displayed as 6 hex-digits if FD_HEX*/
    FT_UINT32,
    FT_UINT40, /* really a UINT64, but displayed as 10 hex-digits if FD_HEX*/
    FT_UINT48, /* really a UINT64, but displayed as 12 hex-digits if FD_HEX*/
    FT_UINT56, /* really a UINT64, but displayed as 14 hex-digits if FD_HEX*/
    FT_UINT64,
    FT_INT8,
    FT_INT16,
    FT_INT24, /* same as for UINT24 */
    FT_INT32,
    FT_INT40, /* same as for UINT40 */
    FT_INT48, /* same as for UINT48 */
    FT_INT56, /* same as for UINT56 */
    FT_INT64,
    FT_IEEE_11073_SFLOAT,
    FT_IEEE_11073_FLOAT,
    FT_FLOAT,
    FT_DOUBLE,
    FT_ABSOLUTE_TIME,
    FT_RELATIVE_TIME,
    FT_STRING,
    FT_STRINGZ,     /* for use with proto_tree_add_item() */
    FT_UINT_STRING, /* for use with proto_tree_add_item() */
    FT_ETHER,
    FT_BYTES,
    FT_UINT_BYTES,
    FT_IPv4,
    FT_IPv6,
    FT_IPXNET,
    FT_FRAMENUM, /* a UINT32, but if selected lets you go to frame with that number */
    FT_PCRE,     /* a compiled Perl-Compatible Regular Expression object */
    FT_GUID,     /* GUID, UUID */
    FT_OID,      /* OBJECT IDENTIFIER */
    FT_EUI64,
    FT_AX25,
    FT_VINES,
    FT_REL_OID, /* RELATIVE-OID */
    FT_SYSTEM_ID,
    FT_STRINGZPAD, /* for use with proto_tree_add_item() */
    FT_FCWWN,
    FT_NUM_TYPES /* last item number plus one */
};
typedef struct _GPtrArray GPtrArray;
typedef struct _GByteArray GByteArray;
struct _GPtrArray {
    gpointer *pdata;
    guint len;
};
struct _GByteArray {
    guint8 *data;
    guint len;
};
typedef struct _proto_node {
    struct _proto_node *first_child;
    struct _proto_node *last_child;
    struct _proto_node *next;
    struct _proto_node *parent;
    void *finfo;
    void *tree_data;
} proto_node;
/** A protocol tree element. */
typedef proto_node proto_tree;
// Test packets (use offset 49 to dissect correctly with mac-lte-framed dissector)
// Demo packets
WD_PUBLIC uint8_t DEMO_PKT_RRC_CONNECTION_SETUP[128];
WD_PUBLIC uint8_t DEMO_PKT_RRC_SETUP_COMPLETE[122];
WD_PUBLIC uint8_t DEMO_PKT_RRC_RECONFIGURATION[114];
WD_PUBLIC uint8_t DEMO_PKT_NAS_ATTACH_REQUEST[118];
// Public API prototypes
// --- Initialization ---
uint8_t wdissector_init(const char *protocol_name);       // Initialize library
void wdissector_set_log_level(enum ws_log_level level);   // Set log level
void wdissector_enable_fast_full_dissection(uint8_t val); // Enable dissection of all fields without string conversion
void wdissector_enable_full_dissection(uint8_t val);
// --- Common dissection functions ---
gboolean packet_set_protocol(const char *lt_arg);
gboolean packet_set_protocol_fast(const char *proto_name);
void packet_dissect(unsigned char *raw_packet, uint32_t packet_length);
void packet_set_direction(int dir);
void packet_cleanup();
void packet_navigate(uint32_t skip_layers, uint32_t skip_groups, uint8_t (*callback)(proto_tree *, uint8_t, uint8_t *)); // Iterates every field of the packet
// --- Wireshark version info ---
const char *wdissector_version_info();
const char *wdissector_profile_info();
// --- Filtering related functions ---
// Condition (internal index)
gboolean packet_has_condition(const char *filter);
gboolean packet_register_condition(const char *filter, uint16_t condition_index); // Register rule
void packet_set_condition(uint16_t condition_index);                              // Set rule
gboolean packet_read_condition(uint16_t condition_index);                         // Read rule (true or false)
// Raw Filter array
const char *packet_register_filter(const char *filter);
void packet_set_filter(const char *filter);
gboolean packet_read_filter(const char *filter);