bindings/python/wdissector.py


        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for F in other_dirs:
        if not os.path.isabs(F):
            F = os.path.abspath(F)
        load_library.other_dirs.append(F)


del loaderclass

# End loader

add_library_search_dirs(['bin'])

# Begin libraries
_libs["bin/libwdissector.so"] = load_library("bin/libwdissector.so")

# 1 libraries
# End libraries

# No modules

enum_ftenum = c_int# src/wdissector.h: 51

FT_NONE = 0# src/wdissector.h: 51

FT_PROTOCOL = (FT_NONE + 1)# src/wdissector.h: 51

FT_BOOLEAN = (FT_PROTOCOL + 1)# src/wdissector.h: 51

FT_CHAR = (FT_BOOLEAN + 1)# src/wdissector.h: 51

FT_UINT8 = (FT_CHAR + 1)# src/wdissector.h: 51

FT_UINT16 = (FT_UINT8 + 1)# src/wdissector.h: 51

FT_UINT24 = (FT_UINT16 + 1)# src/wdissector.h: 51

FT_UINT32 = (FT_UINT24 + 1)# src/wdissector.h: 51

FT_UINT40 = (FT_UINT32 + 1)# src/wdissector.h: 51

FT_UINT48 = (FT_UINT40 + 1)# src/wdissector.h: 51

FT_UINT56 = (FT_UINT48 + 1)# src/wdissector.h: 51

FT_UINT64 = (FT_UINT56 + 1)# src/wdissector.h: 51

FT_INT8 = (FT_UINT64 + 1)# src/wdissector.h: 51

FT_INT16 = (FT_INT8 + 1)# src/wdissector.h: 51

FT_INT24 = (FT_INT16 + 1)# src/wdissector.h: 51

FT_INT32 = (FT_INT24 + 1)# src/wdissector.h: 51

FT_INT40 = (FT_INT32 + 1)# src/wdissector.h: 51

FT_INT48 = (FT_INT40 + 1)# src/wdissector.h: 51

FT_INT56 = (FT_INT48 + 1)# src/wdissector.h: 51

FT_INT64 = (FT_INT56 + 1)# src/wdissector.h: 51

FT_IEEE_11073_SFLOAT = (FT_INT64 + 1)# src/wdissector.h: 51

FT_IEEE_11073_FLOAT = (FT_IEEE_11073_SFLOAT + 1)# src/wdissector.h: 51

FT_FLOAT = (FT_IEEE_11073_FLOAT + 1)# src/wdissector.h: 51

FT_DOUBLE = (FT_FLOAT + 1)# src/wdissector.h: 51

FT_ABSOLUTE_TIME = (FT_DOUBLE + 1)# src/wdissector.h: 51

FT_RELATIVE_TIME = (FT_ABSOLUTE_TIME + 1)# src/wdissector.h: 51

FT_STRING = (FT_RELATIVE_TIME + 1)# src/wdissector.h: 51

FT_STRINGZ = (FT_STRING + 1)# src/wdissector.h: 51

FT_UINT_STRING = (FT_STRINGZ + 1)# src/wdissector.h: 51

FT_ETHER = (FT_UINT_STRING + 1)# src/wdissector.h: 51

FT_BYTES = (FT_ETHER + 1)# src/wdissector.h: 51

FT_UINT_BYTES = (FT_BYTES + 1)# src/wdissector.h: 51

FT_IPv4 = (FT_UINT_BYTES + 1)# src/wdissector.h: 51

FT_IPv6 = (FT_IPv4 + 1)# src/wdissector.h: 51

FT_IPXNET = (FT_IPv6 + 1)# src/wdissector.h: 51

FT_FRAMENUM = (FT_IPXNET + 1)# src/wdissector.h: 51

FT_PCRE = (FT_FRAMENUM + 1)# src/wdissector.h: 51

FT_GUID = (FT_PCRE + 1)# src/wdissector.h: 51

FT_OID = (FT_GUID + 1)# src/wdissector.h: 51

FT_EUI64 = (FT_OID + 1)# src/wdissector.h: 51

FT_AX25 = (FT_EUI64 + 1)# src/wdissector.h: 51

FT_VINES = (FT_AX25 + 1)# src/wdissector.h: 51

FT_REL_OID = (FT_VINES + 1)# src/wdissector.h: 51

FT_SYSTEM_ID = (FT_REL_OID + 1)# src/wdissector.h: 51

FT_STRINGZPAD = (FT_SYSTEM_ID + 1)# src/wdissector.h: 51

FT_FCWWN = (FT_STRINGZPAD + 1)# src/wdissector.h: 51

FT_NUM_TYPES = (FT_FCWWN + 1)# src/wdissector.h: 51

# src/wdissector.h: 103
class struct__GPtrArray(Structure):
    pass

GPtrArray = struct__GPtrArray# src/wdissector.h: 101

# src/wdissector.h: 108
class struct__GByteArray(Structure):
    pass

GByteArray = struct__GByteArray# src/wdissector.h: 102

struct__GPtrArray.__slots__ = [
    'pdata',
    'len',
]
struct__GPtrArray._fields_ = [
    ('pdata', POINTER(None)),
    ('len', c_uint),
]

struct__GByteArray.__slots__ = [
    'data',
    'len',
]
struct__GByteArray._fields_ = [
    ('data', POINTER(c_ubyte)),
    ('len', c_uint),
]

# src/wdissector.h: 113
class struct__proto_node(Structure):
    pass

struct__proto_node.__slots__ = [
    'first_child',
    'last_child',
    'next',
    'parent',
    'finfo',
    'tree_data',
]
struct__proto_node._fields_ = [
    ('first_child', POINTER(struct__proto_node)),
    ('last_child', POINTER(struct__proto_node)),
    ('next', POINTER(struct__proto_node)),
    ('parent', POINTER(struct__proto_node)),
    ('finfo', POINTER(None)),
    ('tree_data', POINTER(None)),
]

proto_node = struct__proto_node# src/wdissector.h: 120

proto_tree = proto_node# src/wdissector.h: 123

# src/wdissector.h: 135
for _lib in _libs.values():
    try:
        DEMO_PKT_RRC_CONNECTION_SETUP = (c_ubyte * int(128)).in_dll(_lib, "DEMO_PKT_RRC_CONNECTION_SETUP")
        break
    except:
        pass

# src/wdissector.h: 137
for _lib in _libs.values():
    try:
        DEMO_PKT_RRC_SETUP_COMPLETE = (c_ubyte * int(122)).in_dll(_lib, "DEMO_PKT_RRC_SETUP_COMPLETE")
        break
    except:
        pass

# src/wdissector.h: 139
for _lib in _libs.values():
    try:
        DEMO_PKT_RRC_RECONFIGURATION = (c_ubyte * int(114)).in_dll(_lib, "DEMO_PKT_RRC_RECONFIGURATION")
        break
    except:
        pass

# src/wdissector.h: 141
for _lib in _libs.values():
    try:
        DEMO_PKT_NAS_ATTACH_REQUEST = (c_ubyte * int(118)).in_dll(_lib, "DEMO_PKT_NAS_ATTACH_REQUEST")
        break
    except:
        pass

# src/wdissector.h: 148
for _lib in _libs.values():
    if not _lib.has("wdissector_init", "cdecl"):
        continue
    wdissector_init = _lib.get("wdissector_init", "cdecl")
    wdissector_init.argtypes = [String]
    wdissector_init.restype = c_ubyte
    break

enum_ws_log_level = c_int# src/wdissector.h: 149

# src/wdissector.h: 149
for _lib in _libs.values():
    if not _lib.has("wdissector_set_log_level", "cdecl"):
        continue
    wdissector_set_log_level = _lib.get("wdissector_set_log_level", "cdecl")
    wdissector_set_log_level.argtypes = [enum_ws_log_level]
    wdissector_set_log_level.restype = None
    break

# src/wdissector.h: 150
for _lib in _libs.values():
    if not _lib.has("wdissector_enable_fast_full_dissection", "cdecl"):
        continue
    wdissector_enable_fast_full_dissection = _lib.get("wdissector_enable_fast_full_dissection", "cdecl")
    wdissector_enable_fast_full_dissection.argtypes = [c_ubyte]
    wdissector_enable_fast_full_dissection.restype = None
    break

# src/wdissector.h: 151
for _lib in _libs.values():
    if not _lib.has("wdissector_enable_full_dissection", "cdecl"):
        continue
    wdissector_enable_full_dissection = _lib.get("wdissector_enable_full_dissection", "cdecl")
    wdissector_enable_full_dissection.argtypes = [c_ubyte]
    wdissector_enable_full_dissection.restype = None
    break

# src/wdissector.h: 153
for _lib in _libs.values():
    if not _lib.has("packet_set_protocol", "cdecl"):
        continue
    packet_set_protocol = _lib.get("packet_set_protocol", "cdecl")
    packet_set_protocol.argtypes = [String]
    packet_set_protocol.restype = c_ubyte
    break

# src/wdissector.h: 154
for _lib in _libs.values():
    if not _lib.has("packet_set_protocol_fast", "cdecl"):
        continue
    packet_set_protocol_fast = _lib.get("packet_set_protocol_fast", "cdecl")
    packet_set_protocol_fast.argtypes = [String]
    packet_set_protocol_fast.restype = c_ubyte
    break

# src/wdissector.h: 155
for _lib in _libs.values():
    if not _lib.has("packet_dissect", "cdecl"):
        continue
    packet_dissect = _lib.get("packet_dissect", "cdecl")
    packet_dissect.argtypes = [POINTER(c_ubyte), c_uint]
    packet_dissect.restype = None
    break

# src/wdissector.h: 156
for _lib in _libs.values():
    if not _lib.has("packet_set_direction", "cdecl"):
        continue
    packet_set_direction = _lib.get("packet_set_direction", "cdecl")
    packet_set_direction.argtypes = [c_int]
    packet_set_direction.restype = None
    break

# src/wdissector.h: 157
for _lib in _libs.values():
    if not _lib.has("packet_cleanup", "cdecl"):
        continue
    packet_cleanup = _lib.get("packet_cleanup", "cdecl")
    packet_cleanup.argtypes = []
    packet_cleanup.restype = None
    break

# src/wdissector.h: 158
for _lib in _libs.values():
    if not _lib.has("packet_navigate", "cdecl"):
        continue
    packet_navigate = _lib.get("packet_navigate", "cdecl")
    packet_navigate.argtypes = [c_uint, c_uint, CFUNCTYPE(UNCHECKED(c_ubyte), POINTER(proto_tree), c_ubyte, POINTER(c_ubyte))]
    packet_navigate.restype = None
    break

# src/wdissector.h: 162
for _lib in _libs.values():
    if not _lib.has("wdissector_version_info", "cdecl"):
        continue
    wdissector_version_info = _lib.get("wdissector_version_info", "cdecl")
    wdissector_version_info.argtypes = []
    wdissector_version_info.restype = c_char_p
    break

# src/wdissector.h: 163
for _lib in _libs.values():
    if not _lib.has("wdissector_profile_info", "cdecl"):
        continue
    wdissector_profile_info = _lib.get("wdissector_profile_info", "cdecl")
    wdissector_profile_info.argtypes = []
    wdissector_profile_info.restype = c_char_p
    break

# src/wdissector.h: 167
for _lib in _libs.values():
    if not _lib.has("packet_has_condition", "cdecl"):
        continue
    packet_has_condition = _lib.get("packet_has_condition", "cdecl")
    packet_has_condition.argtypes = [String]
    packet_has_condition.restype = c_ubyte
    break

# src/wdissector.h: 168
for _lib in _libs.values():
    if not _lib.has("packet_register_condition", "cdecl"):
        continue
    packet_register_condition = _lib.get("packet_register_condition", "cdecl")
    packet_register_condition.argtypes = [String, c_ushort]
    packet_register_condition.restype = c_ubyte
    break

# src/wdissector.h: 169
for _lib in _libs.values():
    if not _lib.has("packet_set_condition", "cdecl"):
        continue
    packet_set_condition = _lib.get("packet_set_condition", "cdecl")
    packet_set_condition.argtypes = [c_ushort]
    packet_set_condition.restype = None
    break

# src/wdissector.h: 170
for _lib in _libs.values():
    if not _lib.has("packet_read_condition", "cdecl"):
        continue
    packet_read_condition = _lib.get("packet_read_condition", "cdecl")
    packet_read_condition.argtypes = [c_ushort]
    packet_read_condition.restype = c_ubyte
    break

# src/wdissector.h: 172
for _lib in _libs.values():
    if not _lib.has("packet_register_filter", "cdecl"):
        continue
    packet_register_filter = _lib.get("packet_register_filter", "cdecl")
    packet_register_filter.argtypes = [String]
    packet_register_filter.restype = c_char_p
    break

# src/wdissector.h: 173
for _lib in _libs.values():
    if not _lib.has("packet_set_filter", "cdecl"):
        continue
    packet_set_filter = _lib.get("packet_set_filter", "cdecl")
    packet_set_filter.argtypes = [String]
    packet_set_filter.restype = None
    break

# src/wdissector.h: 174
for _lib in _libs.values():
    if not _lib.has("packet_read_filter", "cdecl"):
        continue
    packet_read_filter = _lib.get("packet_read_filter", "cdecl")
    packet_read_filter.argtypes = [String]
    packet_read_filter.restype = c_ubyte
    break
